Add missing links

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           <div class="col-md-12 px-0">
             <h1 class="display-6 fst-italic">Al-Nassr Football Club: A Journey to the Top</h1>
             <p class="lead my-3">Making a Mark on the World Stage: Al-Nassr in International Competitions</p>
+            <p class="lead mb-0"><a href="/alnassrfc" class="text-white fw-bold">Continue reading...</a></p>
           </div>
         </div>
 
